--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -13,7 +13,7 @@
     margin: 10px;
     border-radius: 3px;
     border: 1px solid grey;
-    background-color: aquamarine;
+    background-color: rgba(0,0,0,0.147);
 }
 
 #logo {
