--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,33 +1,50 @@
-#card {
-    height: 17rem;
-    width: 14rem;
-    margin: 3%;
-    margin-bottom: 10%;
-    justify-content: center;
+.grilla__lubricentro{
+    margin: 10px auto;
+    max-width: 1200px;
+    display: grid;
+    grid-template-columns: 3fr auto;
+    gap: 10px;
+}
+
+.btnGridPos{
     text-align: center;
-    border-radius: 20px;
-    color: white;
-    background: rgb(121,121,121);
-    background: radial-gradient(circle, rgba(121,121,121,1) 10%, rgba(18,18,18,1) 80%); 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#h2{
+    font-size: 2rem;
+}
+p{
+    font-size: 2rem;
+}
+
+.card__brand{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 30px;
+    background-color: #2c3e5050;
 }
 
 #img{
-    margin: auto;
+    margin: 0 auto;
+    max-width: 80%;
 }
 
 #card:hover{box-shadow: 79px 17px 53px 3px rgba(0,0,0,0.73);
     -moz-box-shadow: 79px 17px 53px 3px rgba(0,0,0,0.73);
     box-shadow: 79px 17px 53px 3px rgba(0,0,0,0.73);
-    transition: 1s;
+    transition: 2s;
 }
 
 #botonc{
-    margin-bottom: 7%;
-    
+    border:1px black;
+    background-color: #bdc3c750;
 }
-
 #botonc:hover{
-    color: black;
-    background-color:#71C40A ;
-    transition: 1;
+    background-color:#f55239 ;
+    transition: 2s;
 }
