--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,17 +1,10 @@
-h1{
-    font-size: 70px;
-    margin-left: 30%;
-}
-
-.tituloP{
-    font-size: 70px;
-    color: white;
+.titulo{
+    font-size: 3rem;
     text-align: center;
-    padding-top: 3%;
-    padding-bottom: 4%;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 .spinner{
-    margin-left:46%;
-    margin-top:13%;
+    margin: 0 auto;
 }
