--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,12 +1,24 @@
 .navegador{
     background-color: white;
-    height: 11vh;
     margin-top: 0;
+}
+
+.banner_logo{
+    background-color: white;
+    text-align: center;
+}
+
+#btnNavbar{
+    border:1px solid grey;
+}
+#btnNavbar:hover{
+    background-color:#f55239 ;
+    transition: 1s;
 }
 
 #lista{
     display: flex;
-    justify-content: flex-end;   
+    justify-content: center;   
 }
 
 #lista button {
@@ -14,8 +26,3 @@
     border-radius: 3px;
 }
 
-#logo {
-    position: absolute;
-    z-index: 1;
-    margin-left: 3%;
-}
