--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -1,10 +1,62 @@
-.anchoModif-form {
-    width: 40%;
-    margin: 0 auto; 
+.titleOrder{
+    width: 70%;
+    margin: 2% auto;
+    text-align: center;
+    background-color: #2c3e5020;
+    border-radius: 30px;
+    padding: 30px;
+}
+
+.formOrder{
+    background-color: #2c3e5020;
+    border-radius: 30px;
+    padding: 30px;
+    width: 50%;
+    margin: 2% auto;
+    text-align: center;
 }
 
 .formColor-modif{
     background-color: #ffffff40;
     border: 1px #ffffff50 solid;
     transition: border-color 6s ease-in-out,box-shadow 1s ease-in-out;
+}
+
+.btnBuy{
+    margin-top: 5%;
+}
+
+.detailOrder{
+    display:flex;
+    flex-direction: column;
+    width: 70%;
+    margin: 2% auto;
+    text-align: center;
+    background-color: #2c3e5020;
+    border-radius: 30px;
+    padding: 30px;
+}
+
+.orderCheckout{
+    border: 1px dashed white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 10px;
+    padding: 10px;
+}
+
+#imgCheckout{
+    margin-right: 10%;
+    max-width: 20%;
+}
+
+#sizePorder{
+    text-align: center;
+    margin: auto;
+    font-size: 1.5em;
+}
+
+#sizePorder2{
+    font-size: 2em;
 }
