--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -42,8 +42,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 10px;
-    padding: 10px;
+    margin: 5%;
+    padding: 5%;
+    gap: 2%;
 }
 
 #imgCheckout{
