--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -1,5 +1,6 @@
 #grilla{
-    display: flex;  
+    display: flex; 
+    flex-direction: row ;
     justify-content: center;
     flex-wrap: wrap;
 }
