--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,17 +1,19 @@
 .navegador{
-    max-width: 100%;
-    background-color: white;
-    margin-top: 0;
-    min-width: 20%;
+    width: 100%;
 }
 
 .banner_logo{
-    /* max-width: 100%; */
+    width: 100%;
     background-color: white;
     text-align: center;
 }
 
+#imgBannerLogo{
+    max-width: 80%;
+}
+
 #btnNavbar{
+    text-align: center;
     border:1px solid grey;
 }
 #btnNavbar:hover{
@@ -20,8 +22,10 @@
 }
 
 #lista{
+    background-color: white;
     display: flex;
-    justify-content: center;   
+    flex-direction: row;
+    justify-content: center;
 }
 
 #lista button {
@@ -29,12 +33,14 @@
     border-radius: 3px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 300px) {
     .navegador{
-        min-width: 60%;
+        text-align: center;
+        max-width: 10%;
         background-color: white;
     }
     .banner_logo{
-        min-width: 30%;  
+        text-align: center;
+        max-width: 70%;  
     }
 }
