--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -42,7 +42,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 5%;
+    margin: 5% auto;
     padding: 5%;
     gap: 2%;
 }
